<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#82B1FF"
    tools:context=".MyProfileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="235dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        android:contentDescription="@string/profilePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_pic"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/nameTextField_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/teal_700"
        android:fontFamily="cursive"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/myName"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/designationTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#2196F3"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/designation"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/nameTextField_profile"
        app:layout_constraintStart_toStartOf="@+id/nameTextField_profile"
        app:layout_constraintTop_toBottomOf="@+id/nameTextField_profile" />

    <TextView
        android:id="@+id/companyTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/companyName"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/designationTextField"
        app:layout_constraintStart_toStartOf="@+id/designationTextField"
        app:layout_constraintTop_toBottomOf="@+id/designationTextField" />

    <TextView
        android:id="@+id/emailTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/email"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/companyTextField"
        app:layout_constraintStart_toStartOf="@+id/companyTextField"
        app:layout_constraintTop_toBottomOf="@+id/companyTextField" />

    <TextView
        android:id="@+id/telephoneTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/telephone"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/emailTextField"
        app:layout_constraintStart_toStartOf="@+id/emailTextField"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField" />

    <TextView
        android:id="@+id/degreeField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#4CAF50"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/degree"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/telephoneTextField"
        app:layout_constraintStart_toStartOf="@+id/telephoneTextField"
        app:layout_constraintTop_toBottomOf="@+id/telephoneTextField" />

    <TextView
        android:id="@+id/UnuniversityTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/university"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/degreeField"
        app:layout_constraintStart_toStartOf="@+id/degreeField"
        app:layout_constraintTop_toBottomOf="@+id/degreeField" />

    <TextView
        android:id="@+id/addressTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/purple_200"
        android:fontFamily="sans-serif"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:text="@string/address"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/UnuniversityTextField"
        app:layout_constraintTop_toBottomOf="@+id/UnuniversityTextField" />

    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/returnButton"
        android:contentDescription="@string/returnButton"
        android:contextClickable="true"
        android:minWidth="96dp"
        android:minHeight="48dp"
        android:onClick="returnMethod"
        android:src="?attr/homeAsUpIndicator"
        android:text="@string/returnButton"
        android:tooltipText="@string/returnButton"
        app:backgroundTint="?android:attr/textColorLinkInverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTextField"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>